# djangorestframework-apicontrol

./: .gitignore  MANIFEST  MANIFEST.in  README.md  pyproject.toml  setup.py
rest_framework_apicontrol/: __init__.py  admin.py  apps.py  context_processors.py  mixins.py  models.py  permissions.py  serializers.py  settings.py  signals.py  urls.py  utils.py  views.py  wsgi.py
rest_framework_apicontrol/migrations/: 0001_initial.py  0002_auto_20180328_0152.py  0003_auto_20180403_0512.py  0004_auto_20181029_1933.py  0005_loggingevent_logginggroup.py  0006_logginggroup_code.py  0007_create_default_logging_group.py  0008_loggingevent_logging_group.py  0009_loggingevent_origin.py  0010_auto_20201224_2201.py  0011_auto_20201226_0009.py  0012_create_default_app.py
