[tool.poetry]
name = "rest-framework-apicontrol"
version = "0.8.2"
description = "Control Clients Apps access over REST APIs with ApiKeys"
readme = 'README.md'
authors = ["Marcelo Cueto <cueto@live.cl>"]
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  'Environment :: Web Environment',
  'Framework :: Django',
  "Framework :: Django :: 2.2",
  "Framework :: Django :: 3.0",
  "Framework :: Django :: 3.1",
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Topic :: Internet :: WWW/HTTP',
]
packages = [
    { include = "rest_framework_apicontrol" },
]


[tool.poetry.dependencies]
python = ">3.6"
Django = ">2.2"
djangorestframework = ">3.7.0"
psycopg2-binary = ">=2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
